<resources>
    <string name="app_name">Apples and Oranges</string>
    <string name="btnName">Go!</string>
    <string name="txtPlayerName">What\'s Your Name?</string>
    <string name="hintName">Enter Your Name</string>
    <string name="imgBackground">Hill Image</string>
    <string name="imgSplash">Apple and Orange Image</string>
    <string name="imgFruit">Fruit Image</string>
    <string name="imgHole">Hole Image</string>
    <string name="imgTree">Tree Image</string>
    <string name="imgShop">Shop Image</string>
    <string name="imgMoney">Money Image</string>
    <string name="sellOrange">Orange</string>
    <string name="sellApple">Apple</string>
    <string name="txtSellFruit">Select the fruit you want to sell</string>
    <string name="btnSellApple">Sell Apple</string>
    <string name="btnSellOrange">Sell Orange</string>
    <string name="txtOr">OR</string>
    <string name="hintSell">How many?</string>
    <string name="txtBuyFruit">Select the fruit you want to buy</string>
    <string name="btnBuyApple">Buy Apple</string>
    <string name="btnBuyOrange">Buy Orange</string>
    <string name="imgApple">Apple Image</string>
    <string name="imgOrange">Orange Image</string>
    <string name="btnSell">Sell</string>
    <string name="btnBuy">Buy</string>
    <string name="btnGame">Back to Game</string>
    <string name="btnOn">Play</string>
    <string name="btnUpApple">Upgrade!</string>
    <string name="btnUpOrange">Upgrade!</string>
    <string name="updates">Click to upgrade the number of apples or oranges you earn!</string>
    <string name="todo">TODO</string>
</resources>